Minor CSS spacing improvements

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -41,7 +41,7 @@
         </div>
       </header>
 
-      <main class="px-3">
+      <main>
         <div class="container">
             {% block main %}
             {% endblock %}
