Add opinions disclaimer in about me page

--- a/app/templates/about_me.html
+++ b/app/templates/about_me.html
@@ -7,5 +7,5 @@
 <p>This guy in the picture is me in 2008 before I began to code.</p>
 <p>I come from the beautiful Canary Island La Palma but I am currently living in Austria.</p>
 <p>In this blog I am going to write about topics mostly related to Python and in special to Django.</p>
-
+<p>My opinions are my own.</p>
 {% endblock %}
