--- a/app/templates/post_detail.html
+++ b/app/templates/post_detail.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block main %}
-{% include "components/post-container.html" %}
+{% include "post_container.html" %}
 <p class="mb-4">
-    <a href="{% url 'blog' %}" class="default-link">
+    <a href="{% url 'post_list' %}" class="default-link">
         <i class="bi bi-arrow-left-circle"></i> Back to blog page
     </a>
 </p>
