--- a/app/static/main.css
+++ b/app/static/main.css
@@ -110,6 +110,10 @@ a{
   color: #fcbf1e !important;
 }
 
+.post-container img{
+  width: 100%;
+}
+
 .post-container a:hover{
   text-decoration: underline;
 }
