Add privacy policy

--- a/app/static/main.css
+++ b/app/static/main.css
@@ -23,7 +23,7 @@ a{
   color: #fcbf1e !important;
 }
 
-.github-link{
+.footer-link{
   font-weight: bold;
   text-decoration: none;
   color: rgba(255,255,255,.5)!important;
