--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -65,7 +65,7 @@
       </main>
 
       <footer id="the-footer" class="mt-auto text-center text-white-50">
-        <p> Abel Castro {% now "Y" %} - checkout the source code of this blog on <a href="https://github.com/abel-castro/abelcastro.dev" class="github-link" target="_blank"> GitHub</a> </p>
+        <p> Abel Castro {% now "Y" %} - checkout the source code of this blog on <a href="https://github.com/abel-castro/abelcastro.dev" class="footer-link" target="_blank"> GitHub</a> - <a class="footer-link" href="{% url "privacy_policy" %}">Privacy Policy</a> </p>
       </footer>
     </div>
 
