--- a/app/templates/about_me.html
+++ b/app/templates/about_me.html
@@ -4,8 +4,8 @@
     <img class="img-circle" src="{{ MEDIA_URL }}banana_lifting.jpg" alt="Me lifting some bananas.">
 </div>
 
-<p>This guy in the picture is me in 2008 before I began to code.</p>
-<p>I come from the beautiful Canary Island La Palma but I am currently living in Austria.</p>
-<p>In this blog I am going to write about topics mostly related to Python and in special to Django.</p>
+<p>This guy in the picture is me, back in 2008, before I began to code.</p>
+<p>I come from the beautiful Canary Island La Palma but for several years now, I have made Austria my home.</p>
+<p>In this blog I (and LLMs 🤖) write about coding-related topics. </p>
 <p>My opinions are my own.</p>
 {% endblock %}
