--- a/app/static/main.css
+++ b/app/static/main.css
@@ -56,6 +56,12 @@ a{
   height: 3.75rem;
 }
 
+.angular-logo{
+  width: 20px; 
+  filter: brightness(0.6);
+  vertical-align: sub;
+}
+
 .nav-masthead .nav-link {
   padding: .25rem 0;
   font-weight: 700;
@@ -97,7 +103,7 @@ a{
     text-align: center;
   }
   #posts-search{
-    display: inline-flex;
+    display: none;
   }
 
 }
