--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -52,7 +52,7 @@
             {% endif %}
             <a class="nav-link {% if request.resolver_match.url_name == "post_list" or request.resolver_match.url_name == "post" %}active{% endif %}" aria-current="page" href="{% url "post_list" %}">Blog</a>
             <a class="nav-link {% if request.resolver_match.url_name == "about_me" %}active{% endif %}" href="{% url "about_me" %}">About Me</a>
-            <a class="nav-link" href="https://ng.abelcastro.dev" target="_blank"><img class="angular-logo" src="{{ MEDIA_URL }}angular-logo.svg" alt="ng.abelcastro.dev - the angular twin of this site"></a>
+            <a class="nav-link" href="https://ng.abelcastro.dev" target="_blank">Angular</a>
             <a class="nav-link" target="_blank" href="https://github.com/abel-castro"><i class="bi bi-github"></i></a>
           </nav>
         </div>
