--- a/app/templates/blog/post_container.html
+++ b/app/templates/blog/post_container.html
@@ -1,3 +1,3 @@
 <div id="post-{{ forloop.counter }}" class="post-container">
-    {% include 'post_content.html' %}
+  {% include 'blog/post_content.html' %}
 </div>
