--- a/app/templates/privacy_policy.html
+++ b/app/templates/privacy_policy.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %}
-{% block main %}
+{% extends "base_blog.html" %}
+{% block main_blog %}
 
 <h2>Privacy Policy for abelcastro.dev</h2>
 
