--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -116,7 +116,7 @@
           <div class="card h-100 bg-light bg-gradient shadow-sm">
             <img
               alt="Basic analytics"
-              src="https://i.imgur.com/3NqGi9A.png"
+              src="https://i.imgur.com/vqKIa0M.jpeg"
               title="Basic analytics"
               height="225"
             />
