--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -77,7 +77,7 @@
   <h2 class="display-5 fw-bold text-center">Projects</h2>
   <div class="album py-5">
     <div class="p-4">
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 text-white">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 text-white justify-content-md-center">
         <div class="col">
           <div class="card h-100 bg-light bg-gradient shadow-sm">
             <img
@@ -141,6 +141,31 @@
 
         <div class="col">
           <div class="card h-100 bg-light bg-gradient shadow-sm">
+            <img
+              alt="Kudos Box"
+              src="https://raw.githubusercontent.com/abel-castro/kudos-box/main/screenshot.jpg"
+              title="Kudos Box"
+              height="225"
+            />
+
+            <div class="card-body">
+              <h5 class="card-title">Kudos-Box</h5>
+              <p class="card-text">
+                Anonymously send kudos to your colleagues and friends.</p>
+              <p class="card-text">
+                The project is not online anymore but the 
+                <a
+                  href="https://github.com/abel-castro/kudos-box/"
+                  target="_blank"
+                  >source code
+                  </a> is still available in GitHub.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card h-100 bg-light bg-gradient shadow-sm">
             <i id="github-projects-icon" class="bi bi-github text-center"></i>
             <div class="card-body">
               <h5 class="card-title">Other Stuff</h5>
@@ -157,6 +182,7 @@
             </div>
           </div>
         </div>
+
       </div>
     </div>
   </div>
