Add info about fasting timer

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -78,6 +78,33 @@
   <div class="album py-5">
     <div class="p-4">
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 text-white justify-content-md-center">
+        
+        <div class="col">
+          <div class="card h-100 bg-light bg-gradient shadow-sm">
+            <img
+              alt="Fasting Timer 18:6"
+              src="https://github.com/abel-castro/fasting-timer/blob/main/fasting-timer-screenshot.jpg?raw=true"
+              title="Fasting Timer 18:6"
+              height="225"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Fasting Timer 18:6</h5>
+              <p class="card-text">
+                Is a simple application designed to help users manage their intermittent fasting schedules. 
+                I used React and Next.js to build it.
+              </p>
+              <p class="card-text">
+                Read more about it in
+                <a
+                  href="https://blog.abelcastro.dev/building-fasting-timer-for-learning-react-nextjs"
+                  target="_blank"
+                  >this blog post</a
+                >.
+              </p>
+            </div>
+          </div>
+        </div>
+
         <div class="col">
           <div class="card h-100 bg-light bg-gradient shadow-sm">
             <img
@@ -128,7 +155,7 @@
                 with Django, DRF, Bootstrap and Chart.js.
               </p>
               <p class="card-text">
-                You can find more details in
+                More information in
                 <a
                   href="https://blog.abelcastro.dev/my-self-made-hosted-google-analytics-alternative"
                   target="_blank"
