--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -50,16 +50,14 @@
       The initial version of my blog was launched in 2021 using Django, Django
       templates, and Bootstrap. Over time, the blog evolved significantly: it
       incorporated htmx and even implemented a REST API. 
-      This version is still live and can be found at https://abelcastro.dev/blog.
-    </p>
-    <p>  
-      There is also an Angular
-      version (which may no longer be functional) in https://ng.abelcastro.dev.
+      Both the blog and this page were part of the same Django project.
     </p>
     <p>
-      The latest iteration was developed with Next.js and Tailwind, 
-      and this is the version I recommend you visit.
+      Similarly to my career path, the blog and the frameworks I work with have evolved significantly.
+      When I discovered the charm of Next.js, I decided to re-implement the blog as a separated Next.js application. 
+      Check it out using the link below!
     </p>
+    <p>Please note that all opinions expressed on the blog are my own.</p>
     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mt-4 mb-4">
       <a
         href="https://blog.abelcastro.dev"
@@ -67,7 +65,6 @@
         >blog.abelcastro.dev 🚀 </a
       >
     </div>
-    <p>Please note that all opinions expressed on the blog are my own.</p>
   </div>
 </div>
 
