Fix project card size for big screens

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -76,7 +76,7 @@
     <div class="p-4">
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 text-white justify-content-md-center">
         
-        <div class="col">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3 col-xxxl-1">
           <div class="card h-100 bg-light bg-gradient shadow-sm">
             <img
               alt="Fasting Timer 18:6"
@@ -102,7 +102,7 @@
           </div>
         </div>
 
-        <div class="col">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3 col-xxxl-1">
           <div class="card h-100 bg-light bg-gradient shadow-sm">
             <img
               alt="Sports Dashboard 2.0"
@@ -136,7 +136,7 @@
           </div>
         </div>
 
-        <div class="col">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3 col-xxxl-1">
           <div class="card h-100 bg-light bg-gradient shadow-sm">
             <img
               alt="Basic analytics"
@@ -163,7 +163,7 @@
           </div>
         </div>
 
-        <div class="col">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3 col-xxxl-1">
           <div class="card h-100 bg-light bg-gradient shadow-sm">
             <img
               alt="Kudos Box"
@@ -188,7 +188,7 @@
           </div>
         </div>
 
-        <div class="col">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3 col-xxxl-1">
           <div class="card h-100 bg-light bg-gradient shadow-sm">
             <i id="github-projects-icon" class="bi bi-github text-center"></i>
             <div class="card-body">
