--- a/app/static/main.css
+++ b/app/static/main.css
@@ -166,3 +166,54 @@ hr.post-separator::after {
 #github-projects-icon {
   font-size: 150px;
 }
+
+@media (min-width: 3000px) {
+  .col-xxxl-1 {
+    flex: 0 0 auto;
+    width: 8.33%;
+  }
+  .col-xxxl-2 {
+    flex: 0 0 auto;
+    width: 16.67%;
+  }
+  .col-xxxl-3 {
+    flex: 0 0 auto;
+    width: 25%;
+  }
+  .col-xxxl-4 {
+    flex: 0 0 auto;
+    width: 33.33%;
+  }
+  .col-xxxl-5 {
+    flex: 0 0 auto;
+    width: 41.67%;
+  }
+  .col-xxxl-6 {
+    flex: 0 0 auto;
+    width: 50%;
+  }
+  .col-xxxl-7 {
+    flex: 0 0 auto;
+    width: 58.33%;
+  }
+  .col-xxxl-8 {
+    flex: 0 0 auto;
+    width: 66.67%;
+  }
+  .col-xxxl-9 {
+    flex: 0 0 auto;
+    width: 75%;
+  }
+  .col-xxxl-10 {
+    flex: 0 0 auto;
+    width: 83.33%;
+  }
+  .col-xxxl-11 {
+    flex: 0 0 auto;
+    width: 91.67%;
+  }
+  .col-xxxl-12 {
+    flex: 0 0 auto;
+    width: 100%;
+  }
+}
